[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui2D/Pause.gd" type="Script" id=1]
[ext_resource path="res://fonts/LastChristmas_PERSONAL_USE_ONLY.otf" type="DynamicFontData" id=2]
[ext_resource path="res://ui2D/settings.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.556863 )

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 393.0
margin_right = 251.0
margin_bottom = 538.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="continue" type="Button" parent="HBoxContainer"]
margin_right = 235.0
margin_bottom = 37.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Continue"

[node name="settings" type="Button" parent="HBoxContainer"]
margin_top = 41.0
margin_right = 235.0
margin_bottom = 78.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="credits" type="Button" parent="HBoxContainer"]
margin_top = 82.0
margin_right = 235.0
margin_bottom = 119.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Credits"

[node name="quit" type="Button" parent="HBoxContainer"]
margin_top = 123.0
margin_right = 235.0
margin_bottom = 160.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Quit"

[node name="settings" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="HBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="HBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/quit" to="." method="_on_quit_pressed"]
